# Talleres_IA_2026

./: .gitignore  CHANGELOG.md  PFAVAL.CL.csv  PFAVAL.CL_gru_forecast.html  README.md  README_MCP.md  Script_finanzas.py  analisis_empresas_bvc.json  analizar_sentimiento.py  noticias_valora_15dias.json  noticias_valora_5dias.json  pfaval.csv  pyproject.toml  validar_json.py
scraper/: README.md  __init__.py  config.py  empresas_bvc.py  utils.py  valora_spider.py
server/: PFAVAL.CL.csv  analisis_tecnico.ipynb  analisis_tecnico.py  mcp_server.py  model_kronos.py  modelo_kronos.ipynb  pfaval.csv
